# qml_hardware_manager

./: CMakeLists.txt  README.md  install.sh  uninstall.sh
cmake/: utils.cmake
src/: CMakeLists.txt  brightness.cpp  brightness.h  ctl.c  main.cpp  main.qml
src/collection/: cpu_data.h
src/samplers/: cpu_sampler_simple.cpp  cpu_sampler_simple.h
src/tests/: test.qml
